// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should return the correct header sections 1`] = `
{
  "text": {
    "text": "*Leaderboard for Mar 26th, 1988*",
    "type": "mrkdwn",
  },
  "type": "section",
}
`;

exports[`should return the correct section for baotw 1`] = `
{
  "fields": [
    {
      "text": ":zombie::trophy: <@nick>",
      "type": "mrkdwn",
    },
    {
      "text": "2",
      "type": "plain_text",
    },
  ],
  "type": "section",
}
`;

exports[`should return the correct section for baotw 2`] = `
{
  "fields": [
    {
      "text": ":trophy: <@nick>",
      "type": "mrkdwn",
    },
    {
      "text": "4",
      "type": "plain_text",
    },
  ],
  "type": "section",
}
`;

exports[`should return the correct section for count above 3 1`] = `
{
  "fields": [
    {
      "text": "<@nick>",
      "type": "mrkdwn",
    },
    {
      "text": "4",
      "type": "plain_text",
    },
  ],
  "type": "section",
}
`;

exports[`should return the correct section for count under 3 1`] = `
{
  "fields": [
    {
      "text": ":zombie:<@nick>",
      "type": "mrkdwn",
    },
    {
      "text": "2",
      "type": "plain_text",
    },
  ],
  "type": "section",
}
`;

exports[`should return the correct tally sections 1`] = `
{
  "fields": [
    {
      "text": "*Squatter*",
      "type": "mrkdwn",
    },
    {
      "text": "*Workouts*",
      "type": "mrkdwn",
    },
  ],
  "type": "section",
}
`;
